--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -154,18 +154,36 @@ nav {
 .loginContainerScreen {
   width: 100%;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.5);
   position: fixed;
   right: 0;
   z-index: 110;
 }
 
 .profileDropDown {
-  width: 20%;
+  width: 15%;
   height: 200px;
-  background-color: grey;
+  background-color: white;
+  box-shadow: 2px 2px 15px black;
   position: absolute;
   right: 8%;
-  top: 5%;
+  top: 5.1%;
   z-index: 85;
+  text-align: center;
+}
+
+.profileDropDown > div {
+  margin: 10% auto;
+  width: 90%;
+}
+.profileDropDown > div > button {
+  width: 90%;
+}
+
+/* current username */
+
+.username {
+  padding: 0 3%;
+  width: 30%;
+  border-radius: 15px;
+  color: blue;
 }
