--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,13 +1,16 @@
 nav {
   width: 100%;
-  height: 23%;
+  height: 9%;
   border-bottom: 1px solid rgb(221, 221, 221);
+  position: fixed;
+  top: 0;
+  background-color: white;
 }
 /* Top Nav */
 
 .topNav {
   width: 100%;
-  height: 33%;
+  height: 100%;
   /* border-bottom: 1px solid red; */
   display: flex;
   justify-content: space-around;
@@ -85,7 +88,8 @@ nav {
 
 .centerNav {
   width: 100%;
-  height: 33%;
+  height: 8%;
+  margin-top: 4.5%;
   /* border-bottom: 1px solid red; */
 }
 
@@ -123,7 +127,8 @@ nav {
 
 .bottomNav {
   width: 100%;
-  height: 33%;
+  height: 8%;
+  border-bottom: 1px solid rgb(221, 221, 221);
 }
 
 .bottomNavigations {
@@ -166,7 +171,7 @@ nav {
   box-shadow: 2px 2px 15px black;
   position: absolute;
   right: 8%;
-  top: 5.1%;
+  top: 70%;
   z-index: 85;
   text-align: center;
 }
@@ -177,6 +182,9 @@ nav {
 }
 .profileDropDown > div > button {
   width: 90%;
+  height: 35px;
+  background-color: black;
+  color: white;
 }
 
 /* current username */
@@ -185,5 +193,6 @@ nav {
   padding: 0 3%;
   width: 30%;
   border-radius: 15px;
-  color: blue;
+  color: grey;
+  font-weight: bolder;
 }
