--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -156,6 +156,7 @@ nav {
   right: 0;
   z-index: 99;
 }
+
 .loginContainerScreen {
   width: 100%;
   height: 100vh;
@@ -164,6 +165,8 @@ nav {
   z-index: 110;
 }
 
+/* dropdown */
+
 .profileDropDown {
   width: 15%;
   height: 200px;
@@ -171,7 +174,7 @@ nav {
   box-shadow: 2px 2px 15px black;
   position: absolute;
   right: 8%;
-  top: 70%;
+  top: 68%;
   z-index: 85;
   text-align: center;
 }
