--- a/src/styles/ProductsCSs/SingleProduct.css
+++ b/src/styles/ProductsCSs/SingleProduct.css
@@ -106,15 +106,18 @@
 .authSecure {
   display: flex;
   text-align: center;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   width: 100%;
   border: 1px solid rgb(235, 232, 232);
   margin: 5% 0;
 }
 .authSecure > div {
-  width: 32%;
+  width: 30%;
   padding: 4% 0;
+}
+.authSecure > div > p {
+  font-size: 0.8em;
 }
 
 .similarProdHeading {
