--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -74,7 +74,7 @@ nav {
 }
 
 .allIconsContainer {
-  width: 35%;
+  width: 45%;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -203,9 +203,12 @@ nav {
 /* current username */
 
 .username {
-  padding: 0 3%;
-  width: 30%;
+  /* padding: 0 3%; */
+  /* width: 55%;
   border-radius: 15px;
   color: grey;
-  font-weight: bolder;
+  font-weight: bolder; */
+  /* display: "flex"; */
+  /* justify-content: space-between; */
+  /* border: 1px solid red; */
 }
