--- a/src/styles/Cart.css
+++ b/src/styles/Cart.css
@@ -106,3 +106,19 @@
   border: none;
   color: white;
 }
+
+.emptyCart {
+  width: 20%;
+  margin: 0 auto;
+}
+.emptyCart > img {
+  width: 90%;
+}
+
+.emptyCart2 {
+  width: 40%;
+  margin: 0 auto;
+}
+.emptyCart2 > img {
+  width: 90%;
+}
