--- a/frontend/src/styles/ProductsCSs/AddProducts.css
+++ b/frontend/src/styles/ProductsCSs/AddProducts.css
@@ -9,7 +9,7 @@
 .addProductSection {
   width: 40%;
   height: 65%;
-  background-image: linear-gradient(green, yellow);
+  background-image: linear-gradient(black, white);
   position: fixed;
   left: 30%;
   top: 28%;
